updated video style 4

--- a/Gallery.html
+++ b/Gallery.html
@@ -722,7 +722,7 @@
         }
 
         .nirmalaVideo {
-            height: 80vh;
+            height: 600px;
         }
 
         @media screen and (max-width:767px) {
