updated video style 5

--- a/Gallery.html
+++ b/Gallery.html
@@ -1085,7 +1085,7 @@
                 </div>
             </div>
             <div class="container">
-                <div class="w-100 my-5 nirmalaVideo embed-responsive-16by9">
+                <div class="w-100 my-5 nirmalaVideo">
                     <iframe class="w-100 h-100"
                         src="https://www.youtube.com/embed/5rm9Tnz9Mqg?rel=0&si=l47i6_ZUC0noZOhd"
                         title="YouTube video player" frameborder="0"
