updated changes at client nirmala on 0-5-2025 2

--- a/Gallery.html
+++ b/Gallery.html
@@ -1164,11 +1164,11 @@
                             <img src="./img/gallery4 (5).JPG" alt="Nirmala Hospital">
                         </a>
                     </div>
-                    <div class="card">
+                    <!-- <div class="card">
                         <a href="./img/gallery4 (6).JPG" data-fancybox="gallery" data-caption="Nirmala Hospital">
                             <img src="./img/gallery4 (6).JPG" alt="Nirmala Hospital">
                         </a>
-                    </div>
+                    </div> -->
                     <div class="card">
                         <a href="./img/gallery4 (7).JPG" data-fancybox="gallery" data-caption="Nirmala Hospital">
                             <img src="./img/gallery4 (7).JPG" alt="Nirmala Hospital">
@@ -1244,11 +1244,11 @@
                             <img src="./img/gallery4 (21).JPG" alt="Nirmala Hospital">
                         </a>
                     </div>
-                    <div class="card">
+                    <!-- <div class="card">
                         <a href="./img/gallery4 (22).JPG" data-fancybox="gallery" data-caption="Nirmala Hospital">
                             <img src="./img/gallery4 (22).JPG" alt="Nirmala Hospital">
                         </a>
-                    </div>
+                    </div> -->
                     <div class="card">
                         <a href="./img/gallery4 (23).JPG" data-fancybox="gallery" data-caption="Nirmala Hospital">
                             <img src="./img/gallery4 (23).JPG" alt="Nirmala Hospital">
@@ -1264,21 +1264,21 @@
                             <img src="./img/gallery4 (25).JPG" alt="Nirmala Hospital">
                         </a>
                     </div>
-                    <div class="card">
+                    <!-- <div class="card">
                         <a href="./img/gallery4 (26).JPG" data-fancybox="gallery" data-caption="Nirmala Hospital">
                             <img src="./img/gallery4 (26).JPG" alt="Nirmala Hospital">
                         </a>
-                    </div>
+                    </div> -->
                     <div class="card">
                         <a href="./img/gallery4 (27).JPG" data-fancybox="gallery" data-caption="Nirmala Hospital">
                             <img src="./img/gallery4 (27).JPG" alt="Nirmala Hospital">
                         </a>
                     </div>
-                    <div class="card">
+                    <!-- <div class="card">
                         <a href="./img/gallery4 (28).JPG" data-fancybox="gallery" data-caption="Nirmala Hospital">
                             <img src="./img/gallery4 (28).JPG" alt="Nirmala Hospital">
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <!-- footer -->
