deleted old gallery images and added new images 2

--- a/Gallery.html
+++ b/Gallery.html
@@ -1115,12 +1115,12 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="./img/gallery/1new.jpg" data-fancybox="gallery" data-caption="Nirmala Hospital">
+                        <a href="./img/gallery/1.jpg" data-fancybox="gallery" data-caption="Nirmala Hospital">
                             <img src="./img/gallery/1new.jpg" alt="Nirmala Hospital">
                         </a>
                     </div>
                     <div class="card">
-                        <a href="./img/gallery/resized_2.jpg" data-fancybox="gallery" data-caption="Nirmala Hospital">
+                        <a href="./img/gallery/2.jpg" data-fancybox="gallery" data-caption="Nirmala Hospital">
                             <img src="./img/gallery/resized_2.jpg" alt="Nirmala Hospital">
                         </a>
                     </div>
