deleted old gallery images and added new images 2

--- a/Gallery.html
+++ b/Gallery.html
@@ -1321,8 +1321,8 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="./img/gallery/39.JPG" data-fancybox="gallery" data-caption="Nirmala Hospital">
-                            <img src="./img/gallery/39.JPG" alt="Nirmala Hospital">
+                        <a href="./img/gallery/39.jpg" data-fancybox="gallery" data-caption="Nirmala Hospital">
+                            <img src="./img/gallery/39.jpg" alt="Nirmala Hospital">
                         </a>
                     </div>
 
