updated spelling mistakes of gynecology and orthopedics in all pages

--- a/alldoctors/index.html
+++ b/alldoctors/index.html
@@ -122,13 +122,13 @@
                     </li>
 
 
-                    <li class="dropdown-inner"><a>Gynecology</a>
+                    <li class="dropdown-inner"><a>Gynaecology</a>
 
                         <ul class="dropdown-inner-content">
                             <li class=""><a href="../laparoscopy/">Laparoscopy</a></li>
                             <li class=""><a href="../hysteroscopy/">Hysteroscopy</a></li>
                             <li class=""><a href="../infertility/">Infertility</a></li>
-                            <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynecology</a></li>
+                            <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynaecology</a></li>
                         </ul>
                     </li>
 
@@ -287,13 +287,13 @@
                                 </li>
 
 
-                                <li class="dropdown-inner"><a>Gynecology</a>
+                                <li class="dropdown-inner"><a>Gynaecology</a>
 
                                     <ul class="dropdown-inner-content">
                                         <li class=""><a href="../laparoscopy/">Laparoscopy</a></li>
                                         <li class=""><a href="../hysteroscopy/">Hysteroscopy</a></li>
                                         <li class=""><a href="../infertility/">Infertility</a></li>
-                                        <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynecology</a></li>
+                                        <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynaecology</a></li>
                                     </ul>
                                 </li>
 
@@ -409,7 +409,7 @@
                     <div class=" text-dotor text-center py-4 bg-[#358E83] text-white">
                         <div class="h-[220px]">
                             <h4 class="font-[Poppins] text-xl  font-semibold py-3">Dr. K. Nirmala</h4>
-                            <p>Obsterrician & Gynaecologist</p>
+                            <p>Obstetrician & Gynaecologist</p>
                             <span class="font-[Poppins]   py-3 inline-block text-sm">MBBS, DGO, DNB</span>
                         </div>
 
