--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -807,12 +807,12 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
 		<li id="menu-item-9510" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9510"><a href="../painless-delivery/index.html">Painless Delivery</a></li>
 	</ul>
 </li>
-	<li id="menu-item-9097" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-9097"><a href="#">Gynecology</a>
+	<li id="menu-item-9097" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-9097"><a href="#">Gynaecology</a>
 	<ul class="sub-menu">
 		<li id="menu-item-9508" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9508"><a href="../laparoscopy/index.html">Laparoscopy</a></li>
 		<li id="menu-item-9505" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9505"><a href="../hysteroscopy/index.html">Hysteroscopy</a></li>
 		<li id="menu-item-9506" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9506"><a href="../infertility/index.html">Infertility</a></li>
-		<li id="menu-item-9496" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9496"><a href="../cosmetic-gynecology/index.html">Cosmetic Gynecology</a></li>
+		<li id="menu-item-9496" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9496"><a href="../cosmetic-gynecology/index.html">Cosmetic Gynaecology</a></li>
 	</ul>
 </li>
 	<li id="menu-item-9102" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-9102"><a href="#">Orthopaedics</a>
