--- a/cosmetic-gynecology/index.html
+++ b/cosmetic-gynecology/index.html
@@ -764,13 +764,13 @@
                         </li>
 
 
-                        <li class="dropdown-inner"><a>Gynecology</a>
+                        <li class="dropdown-inner"><a>Gynaecology</a>
 
                             <ul class="dropdown-inner-content">
                                 <li class=""><a href="../laparoscopy/">Laparoscopy</a></li>
                                 <li class=""><a href="../hysteroscopy/">Hysteroscopy</a></li>
                                 <li class=""><a href="../infertility/">Infertility</a></li>
-                                <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynecology</a></li>
+                                <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynaecology</a></li>
                             </ul>
                         </li>
 
@@ -919,13 +919,13 @@
                                     </li>
 
 
-                                    <li class="dropdown-inner"><a>Gynecology</a>
+                                    <li class="dropdown-inner"><a>Gynaecology</a>
 
                                         <ul class="dropdown-inner-content">
                                             <li class=""><a href="../laparoscopy/">Laparoscopy</a></li>
                                             <li class=""><a href="../hysteroscopy/">Hysteroscopy</a></li>
                                             <li class=""><a href="../infertility/">Infertility</a></li>
-                                            <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynecology</a></li>
+                                            <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynaecology</a></li>
                                         </ul>
                                     </li>
 
@@ -1017,7 +1017,7 @@
                             data-id="9d33ea4" data-element_type="widget" data-widget_type="section_title.default">
                             <div class="elementor-widget-container">
                                 <div class="sub_title-1 section-title text-left">
-                                    <h3 class="main-title">Cosmetic Gynecology at Nirmala Hospital</h3>
+                                    <h3 class="main-title">Cosmetic Gynaecology at Nirmala Hospital</h3>
                                 </div>
                             </div>
                         </div>
@@ -1057,7 +1057,7 @@
                                         display: inline-block
                                     }
                                 </style>
-                                <p class="updatedTextAlign">Cosmetic gynecology encompasses a range of procedures aimed at enhancing the aesthetic appearance and functional health of the female genitalia. At Nirmala Hospital, we offer advanced cosmetic gynecology services to address concerns related to the external and internal aspects of the genital area, helping women achieve improved comfort, confidence, and satisfaction.</p>
+                                <p class="updatedTextAlign">Cosmetic Gynaecology encompasses a range of procedures aimed at enhancing the aesthetic appearance and functional health of the female genitalia. At Nirmala Hospital, we offer advanced cosmetic Gynaecology services to address concerns related to the external and internal aspects of the genital area, helping women achieve improved comfort, confidence, and satisfaction.</p>
                             </div>
                         </div>
                         <div class="elementor-element elementor-element-989d167 elementor-widget elementor-widget-image"
@@ -1080,7 +1080,7 @@
                                         data-id="aebe3c5" data-element_type="widget" data-widget_type="section_title.default">
                                         <div class="elementor-widget-container">
                                             <div class="sub_title-1 section-title text-left">
-                                                <h6 class="main-title-1">Common Cosmetic Gynecology Procedures</h6>
+                                                <h6 class="main-title-1">Common Cosmetic Gynaecology Procedures</h6>
                                             </div>
                                         </div>
                                     </div>
@@ -1160,7 +1160,7 @@
                                                     <span class="elementor-accordion-icon-closed"><i class="ion ion-chevron-down"></i></span>
                                                     <span class="elementor-accordion-icon-opened"><i class="ion ion-chevron-up"></i></span>
                                                 </span>
-                                                <span class="medileaves-accordion-title">Are cosmetic gynecology procedures safe?</span>
+                                                <span class="medileaves-accordion-title">Are cosmetic Gynaecology procedures safe?</span>
                                             </button>
                                         </h6>
                                     </div>
@@ -1168,7 +1168,7 @@
                                     <div id="accordion-2991" class="accordion-collapse collapse show" aria-labelledby="heading-2991"
                                         data-bs-parent="#accordion299">
                                         <div class="accordion-body updatedTextAlign">
-                                            <p>Yes, cosmetic gynecology procedures are generally safe when performed by experienced specialists. At Nirmala Hospital, we prioritize patient safety and use advanced techniques to minimize risks.</p>
+                                            <p>Yes, cosmetic Gynaecology procedures are generally safe when performed by experienced specialists. At Nirmala Hospital, we prioritize patient safety and use advanced techniques to minimize risks.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -1183,7 +1183,7 @@
                                                     <span class="elementor-accordion-icon-closed"><i class="ion ion-chevron-down"></i></span>
                                                     <span class="elementor-accordion-icon-opened"><i class="ion ion-chevron-up"></i></span>
                                                 </span>
-                                                <span class="medileaves-accordion-title">How long is the recovery time for cosmetic gynecology procedures?</span>
+                                                <span class="medileaves-accordion-title">How long is the recovery time for cosmetic Gynaecology procedures?</span>
                                             </button>
                                         </h6>
                                     </div>
@@ -1206,7 +1206,7 @@
                                                     <span class="elementor-accordion-icon-closed"><i class="ion ion-chevron-down"></i></span>
                                                     <span class="elementor-accordion-icon-opened"><i class="ion ion-chevron-up"></i></span>
                                                 </span>
-                                                <span class="medileaves-accordion-title">Will my insurance cover cosmetic gynecology procedures?</span>
+                                                <span class="medileaves-accordion-title">Will my insurance cover cosmetic Gynaecology procedures?</span>
                                             </button>
                                         </h6>
                                     </div>
@@ -1214,7 +1214,7 @@
                                     <div id="accordion-2993" class="accordion-collapse collapse" aria-labelledby="heading-2993"
                                         data-bs-parent="#accordion299">
                                         <div class="accordion-body">
-                                            <p>Cosmetic gynecology procedures are often considered elective and may not be covered by insurance. We recommend discussing costs and payment options with our financial counselors to understand your financial responsibilities.</p>
+                                            <p>Cosmetic Gynaecology procedures are often considered elective and may not be covered by insurance. We recommend discussing costs and payment options with our financial counselors to understand your financial responsibilities.</p>
                                         </div>
                                     </div>
                                 </div>
