--- a/exta.html
+++ b/exta.html
@@ -136,12 +136,12 @@
         <div class="main-content">
             <h1>Laparoscopy</h1>
             <p class="content-text">
-                Laparoscopy is a minimally invasive surgical procedure used in the field of gynecology to diagnose and treat various conditions affecting the female reproductive system. At Nirmala Hospital, laparoscopy is performed by experienced gynecologists to address issues such as ovarian cysts, endometriosis, fibroids, and other pelvic conditions with minimal discomfort and a quicker recovery time compared to traditional surgery.
+                Laparoscopy is a minimally invasive surgical procedure used in the field of Gynaecology to diagnose and treat various conditions affecting the female reproductive system. At Nirmala Hospital, laparoscopy is performed by experienced gynecologists to address issues such as ovarian cysts, endometriosis, fibroids, and other pelvic conditions with minimal discomfort and a quicker recovery time compared to traditional surgery.
             </p>
 
             <img src="../img/Laparoscopy.jpg" alt="Pregnancy Care" class="main-image">
 
-            <h2>Indications for Laparoscopy in Gynecology</h2>
+            <h2>Indications for Laparoscopy in Gynaecology</h2>
             <ul class="bullet-list">
                 <li>Have pre-existing medical conditions such as diabetes, hypertension, or autoimmune disorders</li>
                 <li>Are carrying multiple fetuses (twins, triplets, etc.)</li>
@@ -300,7 +300,7 @@ data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
                                         <div class="feature-icon"><i aria-hidden="true"
                                                 class="glyph-icon flaticon-computer"></i></div>
                                         <div class="feature-info">
-                                            <h6 class="title">Infertility and Gynecology </h6>
+                                            <h6 class="title">Infertility and Gynaecology </h6>
                                         </div>
                                     </div>
                                 </div>
