--- a/serology/index.html
+++ b/serology/index.html
@@ -1693,7 +1693,7 @@
                                                 </li>
                                                 <li id="menu-item-9097"
                                                     class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-9097">
-                                                    <a href="#">Gynecology</a>
+                                                    <a href="#">Gynaecology</a>
                                                     <ul class="sub-menu">
                                                         <li id="menu-item-9508"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9508">
@@ -1707,7 +1707,7 @@
                                                         <li id="menu-item-9496"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9496">
                                                             <a href="../cosmetic-gynecology/index.html">Cosmetic
-                                                                Gynecology</a></li>
+                                                                Gynaecology</a></li>
                                                     </ul>
                                                 </li>
                                                 <li id="menu-item-9102"
