--- a/timetable/event/gynecological/feed/index.html
+++ b/timetable/event/gynecological/feed/index.html
@@ -7,7 +7,7 @@
 	>
 <channel>
 	<title>
-	Comments on: Gynecological	</title>
+	Comments on: Gynaecological	</title>
 	<atom:link href="https://nirmala.snaptics.in/timetable/event/gynecological/feed/" rel="self" type="application/rss+xml" />
 	<link>https://nirmala.snaptics.in/timetable/event/gynecological/</link>
 	<description></description>
