--- a/Gallery.html
+++ b/Gallery.html
@@ -842,13 +842,13 @@
                         </li>
 
 
-                        <li class="dropdown-inner"><a>Gynecology</a>
+                        <li class="dropdown-inner"><a>Gynaecology</a>
 
                             <ul class="dropdown-inner-content">
                                 <li class=""><a href="laparoscopy/">Laparoscopy</a></li>
                                 <li class=""><a href="hysteroscopy/">Hysteroscopy</a></li>
                                 <li class=""><a href="infertility/">Infertility</a></li>
-                                <li class=""><a href="cosmetic-gynecology/">Cosmetic Gynecology</a></li>
+                                <li class=""><a href="cosmetic-gynecology/">Cosmetic Gynaecology</a></li>
                             </ul>
                         </li>
 
@@ -1000,13 +1000,13 @@
                                     </li>
 
 
-                                    <li class="dropdown-inner"><a>Gynecology</a>
+                                    <li class="dropdown-inner"><a>Gynaecology</a>
 
                                         <ul class="dropdown-inner-content">
                                             <li class=""><a href="laparoscopy/">Laparoscopy</a></li>
                                             <li class=""><a href="hysteroscopy/">Hysteroscopy</a></li>
                                             <li class=""><a href="infertility/">Infertility</a></li>
-                                            <li class=""><a href="cosmetic-gynecology/">Cosmetic Gynecology</a></li>
+                                            <li class=""><a href="cosmetic-Gynaecology/">Cosmetic Gynaecology</a></li>
                                         </ul>
                                     </li>
 
@@ -1149,11 +1149,11 @@
                             <img src="./img/gallery/7.JPG" alt="Nirmala Hospital">
                         </a>
                     </div>
-                    <div class="card">
+                    <!-- <div class="card">
                         <a href="./img/gallery/8.JPG" data-fancybox="gallery" data-caption="Nirmala Hospital">
                             <img src="./img/gallery/8.JPG" alt="Nirmala Hospital">
                         </a>
-                    </div>
+                    </div> -->
                     <div class="card">
                         <a href="./img/gallery/9.JPG" data-fancybox="gallery" data-caption="Nirmala Hospital">
                             <img src="./img/gallery/9.JPG" alt="Nirmala Hospital">
