--- a/dr-sushma/index.html
+++ b/dr-sushma/index.html
@@ -766,13 +766,13 @@
                         </li>
 
 
-                        <li class="dropdown-inner"><a>Gynecology</a>
+                        <li class="dropdown-inner"><a>Gynaecology</a>
 
                             <ul class="dropdown-inner-content">
                                 <li class=""><a href="../laparoscopy/">Laparoscopy</a></li>
                                 <li class=""><a href="../hysteroscopy/">Hysteroscopy</a></li>
                                 <li class=""><a href="../infertility/">Infertility</a></li>
-                                <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynecology</a></li>
+                                <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynaecology</a></li>
                             </ul>
                         </li>
 
@@ -925,13 +925,13 @@
                                     </li>
 
 
-                                    <li class="dropdown-inner"><a>Gynecology</a>
+                                    <li class="dropdown-inner"><a>Gynaecology</a>
 
                                         <ul class="dropdown-inner-content">
                                             <li class=""><a href="../laparoscopy/">Laparoscopy</a></li>
                                             <li class=""><a href="../hysteroscopy/">Hysteroscopy</a></li>
                                             <li class=""><a href="../infertility/">Infertility</a></li>
-                                            <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynecology</a></li>
+                                            <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynaecology</a></li>
                                         </ul>
                                     </li>
 
@@ -1079,21 +1079,21 @@
                                     }
                                 </style>
                                 <p>Dr. G. Sushma is a dedicated Obstetrician and Gynecologist with expertise in
-                                    LARPOSCOPY AND KEY HOLE SURGERIES , Cosmetic gynecology with specialized training in
-                                    handling high-risk pregnancies, advanced gynecological procedures, and reproductive
+                                    LARPOSCOPY AND KEY HOLE SURGERIES , Cosmetic Gynaecology with specialized training in
+                                    handling high-risk pregnancies, advanced Gynaecological procedures, and reproductive
                                     medicine. She brings a wealth of experience from her academic and professional
                                     journey, including her work at the largest tertiary care center in Telangana (
                                     OSMANIA ) where she handled numerous complex and critical cases.
                                     Her proficiency in advanced techniques such as laparoscopic surgery and cosmetic
-                                    gynecology is complemented by her commitment to ensuring the highest standard of
+                                    Gynaecology is complemented by her commitment to ensuring the highest standard of
                                     patient care.
                                 </p>
                                 <p class="py-4">Dr. Sushma's expertise encompasses a wide array of obstetric and
-                                    gynecological procedures, including cesarean sections, normal deliveries, and
+                                    Gynaecological procedures, including cesarean sections, normal deliveries, and
                                     hysterectomies</p>
                                 <p>Her academic accomplishments include a postgraduate degree (MS OBGYN) from Osmania
                                     Medical College and specialized certifications such as MRCOG ( London ) and diplomas
-                                    in Minimal Access Surgery and Cosmetic Gynecology. Dr. Sushma has also contributed
+                                    in Minimal Access Surgery and Cosmetic Gynaecology. Dr. Sushma has also contributed
                                     to medical research through numerous paper presentations reflecting her dedication
                                     to advancing women's healthcare and her academic strength.</p>
                                 <p class="pt-4">She strives for perfection in patient care and complete satisfaction
@@ -1238,7 +1238,7 @@
                                                     <div class="feature-icon"><i aria-hidden="true"
                                                             class="glyph-icon flaticon-computer"></i></div>
                                                     <div class="feature-info">
-                                                        <h6 class="title">Cosmetic gynecology</h6>
+                                                        <h6 class="title">Cosmetic Gynaecology</h6>
                                                     </div>
                                                 </div>
                                             </div>
