--- a/pediatrics/index.html
+++ b/pediatrics/index.html
@@ -783,13 +783,13 @@
                         </li>
 
 
-                        <li class="dropdown-inner"><a>Gynecology</a>
+                        <li class="dropdown-inner"><a>Gynaecology</a>
 
                             <ul class="dropdown-inner-content">
                                 <li class=""><a href="../laparoscopy/">Laparoscopy</a></li>
                                 <li class=""><a href="../hysteroscopy/">Hysteroscopy</a></li>
                                 <li class=""><a href="../infertility/">Infertility</a></li>
-                                <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynecology</a></li>
+                                <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynaecology</a></li>
                             </ul>
                         </li>
 
@@ -938,13 +938,13 @@
                                     </li>
 
 
-                                    <li class="dropdown-inner"><a>Gynecology</a>
+                                    <li class="dropdown-inner"><a>Gynaecology</a>
 
                                         <ul class="dropdown-inner-content">
                                             <li class=""><a href="../laparoscopy/">Laparoscopy</a></li>
                                             <li class=""><a href="../hysteroscopy/">Hysteroscopy</a></li>
                                             <li class=""><a href="../infertility/">Infertility</a></li>
-                                            <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynecology</a></li>
+                                            <li class=""><a href="../cosmetic-Gynaecology/">Cosmetic Gynaecology</a></li>
                                         </ul>
                                     </li>
 
