--- a/timetable/event/gynecological/index.html
+++ b/timetable/event/gynecological/index.html
@@ -12,13 +12,13 @@
 		
 				<script>document.documentElement.className = document.documentElement.className + ' yes-js js_active js'</script>
 				<script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
-<title>Gynecological &#8211; Nirmala</title>
+<title>Gynaecological &#8211; Nirmala</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
 <link href='https://fonts.gstatic.com/' crossorigin rel='preconnect' />
 <link rel="alternate" type="application/rss+xml" title="Nirmala &raquo; Feed" href="../../../feed/index.html" />
 <link rel="alternate" type="application/rss+xml" title="Nirmala &raquo; Comments Feed" href="../../../comments/feed/index.html" />
-<link rel="alternate" type="application/rss+xml" title="Nirmala &raquo; Gynecological Comments Feed" href="feed/index.html" />
+<link rel="alternate" type="application/rss+xml" title="Nirmala &raquo; Gynaecological Comments Feed" href="feed/index.html" />
 <script type="text/javascript">
 /* <![CDATA[ */
 window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/nirmala.snaptics.in\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.5.5"}};
@@ -892,10 +892,10 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
         <div class="row align-items-center">
             <div class="col-sm-12">
                 <div class="header1-inner">
-                                <h1 class="page-title">Gynecological</h1>
+                                <h1 class="page-title">Gynaecological</h1>
                                             <div class="breadcrumb">
                         <ul>
-                            <li><a href="../../../index.html" rel="nofollow">Home</a></li><li><span><a href="../index.html">Event</a></span></li><li><span>Gynecological</span></li>                        </ul>
+                            <li><a href="../../../index.html" rel="nofollow">Home</a></li><li><span><a href="../index.html">Event</a></span></li><li><span>Gynaecological</span></li>                        </ul>
                     </div>
                                     </div>
             </div>                
