--- a/trauma/index.html
+++ b/trauma/index.html
@@ -767,13 +767,13 @@
                         </li>
 
 
-                        <li class="dropdown-inner"><a>Gynecology</a>
+                        <li class="dropdown-inner"><a>Gynaecology</a>
 
                             <ul class="dropdown-inner-content">
                                 <li class=""><a href="../laparoscopy/">Laparoscopy</a></li>
                                 <li class=""><a href="../hysteroscopy/">Hysteroscopy</a></li>
                                 <li class=""><a href="../infertility/">Infertility</a></li>
-                                <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynecology</a></li>
+                                <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynaecology</a></li>
                             </ul>
                         </li>
 
@@ -926,13 +926,13 @@
                                     </li>
 
 
-                                    <li class="dropdown-inner"><a>Gynecology</a>
+                                    <li class="dropdown-inner"><a>Gynaecology</a>
 
                                         <ul class="dropdown-inner-content">
                                             <li class=""><a href="../laparoscopy/">Laparoscopy</a></li>
                                             <li class=""><a href="../hysteroscopy/">Hysteroscopy</a></li>
                                             <li class=""><a href="../infertility/">Infertility</a></li>
-                                            <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynecology</a></li>
+                                            <li class=""><a href="../cosmetic-gynecology/">Cosmetic Gynaecology</a></li>
                                         </ul>
                                     </li>
 
