updated changes in nirmala website and icons

--- a/exta.html
+++ b/exta.html
@@ -24,9 +24,10 @@
                     <div class=" w-[35px] h-[35px]   flex justify-center items-center">
                         <img src="../img/top-icon1.png" class="w-full" alt="">
                     </div>
-                    <div class="w-[70%] text-left">
-                        <h5 class="font-[Poppins] text-[white]  font-semibold text-sm">Contact Us</h5>
-                        <p class="font-[Poppins] text-[white] text-sm">+919000503000</p>
+                     <div class="w-[70%] text-left">
+                        <h5 class="font-[Poppins] text-[#358e83]  font-semibold text-sm">Contact Us</h5>
+                        <p class="font-[Poppins] text-[#358e83] text-sm">+919000503000</p>
+                        <p class="font-[Poppins] text-[#358e83] text-sm">040-23345536</p>
                     </div>
                 </div>
                 <div class="flex justify-between px-4  items-center gap-2">
