--- a/dr-k-nirmala/about.html
+++ b/dr-k-nirmala/about.html
@@ -319,9 +319,10 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
                     <div class=" w-[20px] h-[20px]   flex justify-center items-center">
                         <img src="../img/top-icon1.png" class="w-full brightness-50" alt="">
                     </div>
-                    <div class="w-[70%] text-left">
+                     <div class="w-[70%] text-left">
                         <h5 class="font-[Poppins] text-[#358e83]  font-semibold text-sm">Contact Us</h5>
                         <p class="font-[Poppins] text-[#358e83] text-sm">+919000503000</p>
+                        <p class="font-[Poppins] text-[#358e83] text-sm">040-23345536</p>
                     </div>
                 </div>
                 <div class="flex justify-start px-4  items-center gap-4">
@@ -720,8 +721,8 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
     <div class="slideouticons">
 
         <input type="checkbox" id="togglebox" />
-        <label for="togglebox" class="mainlabel fa fa-plus"></label>
-        <p class="text_iconPlus">Talk to us?</p>
+        <label for="togglebox" class="mainlabel fa fa-plus" style="display: none;"></label>
+        <!-- <p class="text_iconPlus">Talk to us?</p> -->
 
         <div class="iconswrapper">
             <ul>
@@ -729,19 +730,19 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
                 <li><a href="https://www.facebook.com/people/Nirmala-Hospitals/61557882158136/" class="fa fa-facebook" title="Facebook"></a></li>
                 <li><a href="https://www.instagram.com/nirmalahospitalshyd/" class="fab fa-instagram" title="Instagram"></a></li>
                 <li><a href="https://wa.me/919000503000" class="fab fa-whatsapp" title="WhatsApp"></a></li>
-                 <li><a href="tel:9000503000" class="fab fa fa-phone" title="Phone"></a></li>
+                 <li><a href="tel:04023345536" class="fab fa fa-phone" title="040-23345536"></a></li>
             </ul>
         </div>
 
     </div>
-<div class="floating_btn">
-  <a target="_blank" href="https://wa.me/+919000503000">
-    <div class="contact_icon">
-      <i class="fa fa-whatsapp my-float"></i>
+    <div class="floating_btn" style="display: block;">
+        <a href="tel:+919000503000">
+            <div class="contact_icon">
+                <i class="fa fa-phone my-float"></i>
+            </div>
+        </a>
+        <p class="text_icon">Talk to us?</p>
     </div>
-  </a>
-  <p class="text_icon">Talk to us?</p>
-</div>
 
 				</div>
 		
