--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                             </li>
                             <li class="py-2 font-[Poppins] "><a href="./LIMB-RECONSTRUCTION-SURGERIES">
                                     <i class="fa-solid fa-star text-[#358E83]"></i>&nbsp;
-                                    &nbsp;Limb Reconstruction Surgeri
+                                    &nbsp;Limb Reconstruction Surgeries
                                 </a></li>
 
                             <li class="py-2 font-[Poppins] "><a href="spine-surgery/">
