updated whaqts app icon in doctors and tests pages

--- a/Tests/index.html
+++ b/Tests/index.html
@@ -1188,10 +1188,10 @@
         </div>
 
     </div>
-    <div class="floating_btn">
-        <a target="_blank" href="https://wa.me/+919000503000">
+   <div class="floating_btn" style="display: block;">
+        <a href="tel:+919000503000">
             <div class="contact_icon">
-                <i class="fa fa-whatsapp my-float"></i>
+                <i class="fa fa-phone my-float"></i>
             </div>
         </a>
         <p class="text_icon">Talk to us?</p>
