updated whaqts app icon in doctors and tests pages 2

--- a/Tests/index.html
+++ b/Tests/index.html
@@ -1082,7 +1082,7 @@
             </div>
             <div class="flex  text-sm gap-x-3 gap-y-8 lg:w-2/3 sm:grid-cols-3">
 
-                <div class="w-1/2">
+                <div class="w-1/2 text-white">
                     <h3 class="tracking-wide uppercase  font-semibold font-[Roboto] text-[#358E83]">Quick Links</h3>
                     <ul class="space-y-1">
                         <li>
@@ -1108,7 +1108,7 @@
 
                     </ul>
                 </div>
-                <div class="w-1/2">
+                <div class="w-1/2 text-white">
                     <h3 class="uppercase  font-semibold font-[Roboto] text-[#358E83]">Social Links</h3>
                     <ul class="space-y-1">
                         <li>
@@ -1134,16 +1134,16 @@
                         </li>
                          <li>
                                     <a href="https://www.facebook.com/profile.php?id=61557882158136" target="_blank"
-                                        class="font-[poppins] py-2 inline-block">
-                                        <i class="fa-brands fa-facebook text-[#1877F2] text-2xl"></i>
+                                        class="font-[poppins] py-2 inline-block text-white">
+                                        <i class="fa-brands fa-facebook  text-2xl"></i>
                                     </a>
                                     <a href="https://www.instagram.com/nirmalahospitals/" target="_blank"
-                                        class="font-[poppins] py-2 inline-block">
-                                        <i class="fa-brands fa-square-instagram px-4 text-[#E4405F] text-2xl"></i>
+                                        class="font-[poppins] py-2 inline-block text-white">
+                                        <i class="fa-brands fa-square-instagram px-4  text-2xl"></i>
                                     </a>
                                     <a href="https://www.youtube.com/channel/UC6q06dLWyeOCM5aTvSYVigQ" target="_blank"
-                                        class="font-[poppins] py-2 inline-block">
-                                        <i class="fa-brands fa-square-youtube text-[#FF0000] text-2xl"></i>
+                                        class="font-[poppins] py-2 inline-block text-white">
+                                        <i class="fa-brands fa-square-youtube  text-2xl"></i>
                                     </a>
                                 </li>
 
@@ -1156,7 +1156,7 @@
             </div>
         </div>
         <div class="custom-container flex flex-col justify-between py-10 mx-auto space-y-8 lg:flex-row lg:space-y-0">
-            <div class="py-6 text-sm ">© 2025 All Rights Reserved.</div>
+            <div class="py-6 text-sm text-white">© 2025 All Rights Reserved.</div>
             <div class="">
                 <img src="./img/google.png" class="w-[70%] text-center mx-auto" alt="">
             </div>
