--- a/alldoctors/index.html
+++ b/alldoctors/index.html
@@ -806,7 +806,7 @@
 
                 </a>
             </div>
-            <div class="flex  text-sm gap-x-3 gap-y-8 lg:w-2/3 sm:grid-cols-3">
+            <div class="flex  text-sm gap-x-3 gap-y-8 lg:w-2/3 sm:grid-cols-3 text-white">
 
                 <div class="w-1/2">
                     <h3 class="tracking-wide uppercase  font-semibold font-[Roboto] text-[#358E83]">Quick Links</h3>
@@ -836,10 +836,10 @@
                     <h3 class="uppercase  font-semibold font-[Roboto] text-[#358E83]">Social Links</h3>
                     <ul class="space-y-1">
                         <li>
-                            <a rel="noopener noreferrer" href="#" class="font-[poppins] py-2 inline-block">Address: 2/3 RT, Opp. Post Office, Vijaya Nagar Colony, Hyderabad, Telangana</a>
+                            <a rel="noopener noreferrer" href="#" class="font-[poppins] py-2 inline-block text-white">Address: 2/3 RT, Opp. Post Office, Vijaya Nagar Colony, Hyderabad, Telangana</a>
                         </li>
                         <li>
-                             <a rel="noopener noreferrer" href="#" class="font-[poppins] py-2 inline-block">
+                             <a rel="noopener noreferrer" href="#" class="font-[poppins] py-2 inline-block text-white">
                                 <i class="fa-solid fa-phone">
 
                                 </i>
@@ -849,7 +849,7 @@
 
                               
 
-                                <a rel="noopener noreferrer" href="#" class="font-[poppins] py-2 inline-block">
+                                <a rel="noopener noreferrer" href="#" class="font-[poppins] py-2 inline-block text-white">
                                     <i class="fa-solid fa-phone">
     
                                     </i>
@@ -857,15 +857,15 @@
                         </li>
                         <li>
                             <a rel="noopener noreferrer" href="https://www.facebook.com/profile.php?id=61557882158136"
-                                class="font-[poppins] py-2 inline-block">
+                                class="font-[poppins] py-2 inline-block text-white">
                                 <i class="fa-brands fa-facebook  text-2xl "></i>
                             </a>
                             <a rel="noopener noreferrer" href="https://www.instagram.com/nirmalahospitals/"
-                                class="font-[poppins] py-2 inline-block">
+                                class="font-[poppins] py-2 inline-block text-white">
                                 <i class="fa-brands fa-square-instagram px-4 text-2xl"></i>
                             </a>
                             <a rel="noopener noreferrer" href="https://www.youtube.com/channel/UC6q06dLWyeOCM5aTvSYVigQ"
-                                class="font-[poppins] py-2 inline-block">
+                                class="font-[poppins] py-2 inline-block text-white">
                                 <i class="fa-brands fa-square-youtube text-2xl"></i>
                             </a>
                         </li>
@@ -879,7 +879,7 @@
             </div>
         </div>
         <div class="custom-container flex flex-col justify-between py-10 mx-auto space-y-8 lg:flex-row lg:space-y-0">
-            <div class="py-6 text-sm ">© 2025 All Rights Reserved.</div>
+            <div class="py-6 text-sm text-white">© 2025 All Rights Reserved.</div>
             <div class="">
                 <img src="./img/google.png" class="w-[70%] text-center mx-auto" alt="">
             </div>
