--- a/Gallery.html
+++ b/Gallery.html
@@ -1460,7 +1460,7 @@
             <div class="floating_btn">
                 <a target="_blank" href="https://wa.me/+919000503000">
                     <div class="contact_icon">
-                        <i class="fa fa-whatsapp my-float"></i>
+                        <i class="fa fa-phone my-float"></i>
                     </div>
                 </a>
                 <p class="text_icon">Talk to us?</p>
