updated slider videos

--- a/index.html
+++ b/index.html
@@ -1351,7 +1351,7 @@
                     <div class="swiper-slide">
                         <video src="./img/video_testimonial3.mp4" controls></video>
                     </div>
-                </div>
+                </div> <br><br>
                 <!-- Pagination Dots -->
                 <div class="swiper-pagination VideoTestimonialSwiper-pagination mt-6"></div>
             </div>
