updated banner ad removed unnecessary files

--- a/Tests/index.html
+++ b/Tests/index.html
@@ -1289,7 +1289,7 @@
     </script>
 
 
-    <script>
+    <!-- <script>
         var amount1 = document.getElementById('amount1')
 
         for (let i = 10000; i < 20000; i++) {
@@ -1305,7 +1305,7 @@
 
             }, 1 * i)
         }
-    </script>
+    </script> -->
 
     <script>
         function showScheduleForm() {
