--- a/alldoctors/index.html
+++ b/alldoctors/index.html
@@ -1012,7 +1012,7 @@
     </script>
 
 
-    <script>
+    <!-- <script>
         var amount1 = document.getElementById('amount1')
 
         for (let i = 10000; i < 20000; i++) {
@@ -1028,7 +1028,7 @@
 
             }, 1 * i)
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
