--- a/connect1/index.html
+++ b/connect1/index.html
@@ -594,7 +594,7 @@
     </script>
 
 
-    <script>
+    <!-- <script>
         var amount1 = document.getElementById('amount1')
 
         for (let i = 10000; i < 20000; i++) {
@@ -610,7 +610,7 @@
 
             }, 1 * i)
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
