--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
     <div class="row slider">
         <div class="box1 relative">
             <!-- <img src="img/Nirmala-slider-1.png" class="laptop-show" alt=""> -->
-            <img src="./img/home_banner_ortho.jpg" alt="">
-            <img src="img/NirmalaMobile1.png" class="phone-show" alt="">
+            <img src="./img/banner-Desin1-desktop.jpg" alt="">
+            <img src="img/banner-desin1-mobile.jpg" class="phone-show" alt="">
 
             <div class="absolute top-0 left-0 w-full h-full  bg-[black] opacity-50 z-1"></div>
             <!-- <div class="h1">
@@ -444,7 +444,8 @@
 
         </div>
         <div class="box1 relative">
-            <img src="img/Nirmala-slider-3.png" alt="">
+            <!-- <img src="img/Nirmala-slider-3.png" alt=""> -->
+            <img src="https://media.istockphoto.com/id/1418999473/photo/doctors-comforting-disabled-elderly-patient.jpg?s=612x612&w=0&k=20&c=ggVR5D9U8IY7irIrgvfqSmlLwA7se4vc2fRSAjV2lSs=" alt="">
             <img src="img/NirmalaMobile3.png" class="phone-show" alt="" class="laptop-show">
             <div class="absolute top-0 left-0 w-full h-full  bg-[black] opacity-50 z-1"></div>
             <div class="h1">
@@ -512,7 +513,7 @@
 
 
     <!-- world class Patients -->
-    <section class="bg-[url(./img/HospitalIMG.jfif)] bg-cover bg-no-repeat relative" data-aos="fade-up" id="aboutus"
+    <section class="bg-cover bg-no-repeat relative" data-aos="fade-up" id="aboutus"
         data-aos-duration="1000">
         <div class=" w-[16%] md:w-[8%] absolute top-0 right-3 md:right-10 p-5 bg-[white]">
             <img src="./img/image2.png" class="w-full" alt="">
@@ -1962,7 +1963,7 @@
         AOS.init();
     </script>
 
-
+<!-- 
     <script>
         var amount1 = document.getElementById('amount1')
 
@@ -1974,12 +1975,12 @@
         function print(i) {
             setTimeout(() => {
 
-                amount1.innerHTML = `${i}`
+              amount1.innerHTML = `${i}`
 
 
-            }, 1 * i)
-        }
-    </script>
+           }, 1 * i)
+         }
+    </script> -->
 
 
     <!-- gallery swiper script -->
