updated banner images

--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
             </div>
         </div>
         <div class="box1 relative">
-            <img src="img/coverpage-gynecology2.jpeg" alt="">
-            <img src="img/NirmalaMobile2.png" class="phone-show" alt="" class="laptop-show">
+            <img src="img/homepage-banner2.jpg" alt="" class="laptop-show">
+            <img src="img/homepage-banner2-mobile.jpg" class="phone-show" class="phone-show" alt="" >
             <div class="absolute top-0 left-0 w-full h-full  bg-[black] opacity-50 z-1"></div>
             <div class="h1">
                 <h1 class="text-[#39404a] md-w-[60%] ">COMPREHENSIVE GYNAECOLOGICAL</h1>
@@ -529,8 +529,7 @@
                             </div>
                         </div>
                         <div class="md:w-1/2 w-full ">
-                            <h1 class="world-h1  font-[Roboto]  text-[#358E83] ">World - Class Patients Facilities
-                                Designed For You</h1>
+                            <h1 class="world-h1  font-[Roboto]  text-[#358E83] ">State of the Art Facilities Designed for you</h1>
                             <p class="mb-3">Since 25 years, Nirmala Hospital has been providing quality health care for
                                 the people in all their diverse needs. People trust us because of the strong
                                 relationships we have built with them over the years. Nirmala Hospital has become a
